--- a/VRChat/94/1206594.html
+++ b/VRChat/94/1206594.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "UARbFy6vBN6jT+kxSS4IF2BwDA7zS1x8zEILlNpO8Kc="></script>
+    "/nU5xxcrrRtYX/sWzt9d5hADXE+VlVb2q6CTT/rVZl4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[3Dモデル]ichigo","description":"ichigoをつくりました．\n\nVRChat内アクセサリなどに使っていただけると嬉しいです．\n\n677ポリゴンです．\n\nユニティパッケージで配布します．\n\nFBXモデル，テクスチャ入っています．\n\n改変改造再配布御自由に御使用ください．\n\n※自作発言のみお控えください．\n※本モデルの使用によるトラブル等に対してtegetegeは一切責任を負いかねます．\n\nまた，投げ銭用で花と野菜の培養土のモデルを追加したものも用意しています．\nこちらも改変改造再配布等自由に御使用ください．\n\n質問等ありましたらtwitterのDMにて御連絡ください．\n@TEGETEGE1224","url":"https://booth.pm/ja/items/1206594","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/de171399-6135-4a60-8548-d1e79559b536/i/1206594/af0a5afd-6082-41da-ab7b-eeed7a7b4f02_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="UARbFy6vBN6jT+kxSS4IF2BwDA7zS1x8zEILlNpO8Kc="></script>
+    nonce="/nU5xxcrrRtYX/sWzt9d5hADXE+VlVb2q6CTT/rVZl4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1206594/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               11
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1206594/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               11
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
