--- a/VRChat/40/1202640.html
+++ b/VRChat/40/1202640.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "4MrP1A02ac5seiNkxUMtNTVsJjJerms+C32zvE6lHjA="></script>
+    "CC1+KkQBxCVpZWDN4ls+pZQ26r6Q3xhoa1QHe6uwpW0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"黒鬼装甲　夜叉ノ頭蓋","description":"English explanation is at the bottom of this page.\n\n鬼を模した面の４色セットです。\n\n2019/04/10新カラーバリエーション追加しました！\n\n本作品はVRCやUnityでの利用を想定しております。\nバーチャルマーケット２のFutureTerminalAに出展させてもらいます！！\n\n2019/09/21～09/25に開催されますバーチャルマーケット３にて\n定ノ助さまのスペースにおいていただけることになりました！\n（九龍帝国城下町参番街）Twitter:＠Sdnsk \n定ノ助さま、ありがとうございます！！\n\n2019/09/26～10/02に開催されます落選マーケットに出展させていただきます！","url":"https://booth.pm/ja/items/1202640","offers":{"priceCurrency":"JPY","@type":"Offer","price":"350"},"image":"https://booth.pximg.net/c/620x620/eb7cde3f-8485-4ff2-b79c-34ed3e90b219/i/1202640/6c0afa25-a69c-45df-97b7-496cfd8a28c7_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="4MrP1A02ac5seiNkxUMtNTVsJjJerms+C32zvE6lHjA="></script>
+    nonce="CC1+KkQBxCVpZWDN4ls+pZQ26r6Q3xhoa1QHe6uwpW0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -122,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -136,7 +135,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -177,10 +177,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1202640/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              1342
+                              1343
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -192,14 +192,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1202640/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              1342
+                              1343
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
