--- a/VRChat/21/1203821.html
+++ b/VRChat/21/1203821.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "/6f6nEh0umBEdHJIqGf5egseFhf+jsc+dj8CJkXw9Eg="></script>
+    "lz3DCYBWQkhCn+NdF7Tp9rIOgUt9NcOSTPBSjeDbSZk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Thor hammer","description":"神の武器「Thorhammer」\nマテリアル数：１\nポリゴン数：620\n\n「神の武器を模したその器は神を滅する威力を発揮する」\n片手で振り回す大きなハンマーです。\n決して両手持ちにしないでください勝てなくなります。\n\n雷パーティクルをつかえばThorっぽくなるかも？？","url":"https://booth.pm/ja/items/1203821","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/1d14c665-3ae2-443e-9d88-4fc1502813e4/i/1203821/be09d14b-b989-45c4-a9df-44830dc65ba8_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="/6f6nEh0umBEdHJIqGf5egseFhf+jsc+dj8CJkXw9Eg="></script>
+    nonce="lz3DCYBWQkhCn+NdF7Tp9rIOgUt9NcOSTPBSjeDbSZk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1203821/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               15
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1203821/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               15
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
