--- a/VRChat/98/1194398.html
+++ b/VRChat/98/1194398.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "iY717pb595I2TJIr0xM37NeGAJ84rSyxtI4bmkEr2Dw="></script>
+    "EzNWKo/zxDmWkaFP/dbwpRM1IkKKsASn5sNSwglTNoo="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル「リーゼロッテ」","description":"◆オリジナル3Dモデル「リーゼロッテ」◆\n製作者：彩色さら\n\n◆導入方法◆\nVRCSDKを導入済みのUnityプロジェクトにUnitypackageファイルをインポートしてください。DynamicBone使用の場合事前に導入しておけば数値が反映されます\nデフォルトとしてsynqark様開発のArktoon-Shadersを同梱してあります。\n\n以下同梱Prefabの説明です。\n\nLeselotte_ver1.0　\n本体です。ケープ、イヤーマフは取り外せます。手袋と素手は選択式になっているのでお好みでお使いください。\nウェイトスカートとDynamicBoneスカートを両方用意しておりますのでお好きな方をお使いください。\nLeselotte_ver1.0_Light_1\n軽装状態の軽量版です。\n\nLeselotte_ver1.0_Light_2\nフル装備状態の軽量版です。\n\nLeselotte_ver1.0_Body\n素体です。\n\n色違いのテクスチャを同梱しています。「Texture」フォルダ内に入っているので差し替えてご利用ください。（スク水2種は素体用です。）\n\n◆利用規約◆\n本モデルを購入した時点で本規約に同意したものとします。\n\n◆利用について◆\n営利目的での利用は可能です。\n改変しての利用は自由ですが、本モデルの著作権は作者（彩色さら）に帰属します。\nR-18、R-18G表現への利用は可能です。\n\n◆禁止事項◆\n本モデルの二次配布、販売は禁止させていただきます。\n例外としてVRChatへのアバターアップロードは許可しますが、ペデスタル利用は禁止させていただきます。\n宗教的、政治的また反社会的表現への利用は禁止させていただきます。\n他者への誹謗中傷目的への利用は禁止させていただきます。\n\n◆免責事項◆\n本モデルを利用したことによって発生したいかなる損害に対しても作者は一切責任を負いません。\n\nご不明な点等ございましたら、彩色さら(twitterID：Sara_Ayashiki)までお願いします。","url":"https://booth.pm/ja/items/1194398","offers":{"priceCurrency":"JPY","@type":"Offer","price":"5000"},"image":"https://booth.pximg.net/c/620x620/adaeb662-2e13-439e-acd0-f0d59980156c/i/1194398/872b7a87-e87d-4e23-a739-9c20a41138d8_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="iY717pb595I2TJIr0xM37NeGAJ84rSyxtI4bmkEr2Dw="></script>
+    nonce="EzNWKo/zxDmWkaFP/dbwpRM1IkKKsASn5sNSwglTNoo="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -173,7 +173,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1194398/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               56
@@ -188,14 +188,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1194398/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               56
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
